--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -10,10 +11,10 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@ihollander/jest-learn-reporter": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@ihollander/jest-learn-reporter": "^1.0.1",
     "mocha": "^8.2.1"
   },
   "scripts": {
